Fixes half cut icon on small displays

--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,8 @@
 
 .link {
   color: var(--color_secondary);
-  width: 100%;
-  height: 100%;
-  padding-top: 7vh;
-  text-align: center;
+  max-width: 80%;
+  max-height: 80%;
 }
 
 
